syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.Smallbets-plugins";

import "scrimmage/proto/Vector3d.proto";

package Smallbets_plugins;

message Example1 {
        scrimmage_proto.Vector3d vec = 1;
        double value = 2;
}
